# jobmatch_rust

./: Cargo.toml  build.sh  tauri.conf.json
src/: config.rs  csv_handler.rs  gui.rs  lib.rs  main.rs
src/db/: database.rs  ingestion.rs  mod.rs  skills_kb.rs
src/matching/: matcher.rs  mod.rs  scorer.rs  skill_matcher.rs
src/models/: candidate.rs  job.rs  mod.rs
src/nlp/: mod.rs  skill_extractor.rs  text_processor.rs
src/parsers/: pdf_parser.rs
src/pipeline/: pipeline.rs
src/rag/: mod.rs  rag_support.rs
tests/: integration_tests.rs
ui/: index.html  main.js  style.css
